Class 11(Django CRUD Edit, Update, View Operation)
Django CRUD Edit Update Operation
-Edit Operation
-Update Operation
-View Operation

--- a/Class 11(Django CRUD Edit, Update, View Operation)/myproject/template/studentpage.html
+++ b/Class 11(Django CRUD Edit, Update, View Operation)/myproject/template/studentpage.html
@@ -52,7 +52,7 @@
     <td>
         <a href="{% url 'editstudentpage' i.id %}">Edit</a>
         <a href="{% url 'deletestudentpage' i.id %}">Delete</a>
-        <a href="">View</a>
+        <a href="{% url 'viewstudentpage' i.id %}">View</a>
     </td>  
   </tr>
 
